--- a/public/bundled.yaml
+++ b/public/bundled.yaml
@@ -61,28 +61,17 @@ paths:
           $ref: '#/components/responses/BadRequest'
   /tasks/{id}:
     get:
-      '400':
-        description: Invalid ID parameter
-        content:
-          application/json:
-            schema:
-              $ref: ../schemas/ValidationError.yaml
-      '404':
-        description: Task not found
-        content:
-          application/json:
-            schema:
-              $ref: ../components/schemas/NotFoundError.yaml
       summary: Get a task by Id
-      tags: '-Tasks'
+      tags:
+        - Tasks
       parameters:
-        '-name': id
-        in: path
-        required: true
-        description: ID of the task to retrieve
-        schema:
-          type: integer
-          example: 1
+        - name: id
+          in: path
+          required: true
+          description: ID of the task to retrieve
+          schema:
+            type: integer
+            example: 1
       responses:
         '200':
           description: Task found Successfully
@@ -90,6 +79,18 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Task'
+        '400':
+          description: Invalid ID parameter
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ValidationError'
+        '404':
+          description: Task not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotFoundError'
 components:
   schemas:
     Task:
@@ -115,6 +116,14 @@ components:
           type: array
           items:
             type: string
+    NotFoundError:
+      type: object
+      properties:
+        error:
+          type: string
+          example: Task not found
+      required:
+        - error
   responses:
     BadRequest:
       description: Invalid Input
